--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,34 @@
+.top-page {
+  line-height: 175%;
+}
+
+.site-title {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.self-photo {
+  width: 350px;
+}
+
+.left-info {
+  margin-right: 15px;
+}
+
+.self-index {
+  padding: 20px;
+}
+
+.flex-info {
+  display: flex;
+}
+
+.attention-info {
+  font-weight: bold;
+}
+
+/*
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -31,3 +62,4 @@ body {
     text-wrap: balance;
   }
 }
+*/
