--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,14 @@
 body {
   font-family: "Hiragino Kaku Gothic ProN";
-  margin: 3px;
+  margin: 0px;
+}
+
+main {
+  display: flex;
+}
+
+.top-page {
+  margin-left: 5px;
 }
 
 .site-title {
@@ -32,6 +40,7 @@ body {
 
 .right-info {
   line-height: 160%;
+  padding-right: 5px;
 }
 
 .self-index {
@@ -49,7 +58,7 @@ body {
 }
 .contact-address {
   line-height: 160%;
-  margin-top: 30px;
+  margin: 30px 0;
 }
 
 .flex-info {
