--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,111 +1,19 @@
+html,
 body {
   font-family: "Hiragino Kaku Gothic ProN";
-  margin: 0px;
+  height: 100%;
+  margin: auto;
+}
+
+body {
+  bottom: 0;
 }
 
 main {
   display: flex;
+  min-height: 100%;
 }
 
-.top-page {
-  margin-left: 5px;
+main>* {
+  width: 100vw;
 }
-
-.site-title {
-  font-size: 30px;
-  font-weight: bold;
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 40px;
-}
-
-.latest-info-title {
-  text-align: center;
-  margin-bottom: 60px;
-}
-
-.latest-info {
-  font-weight: bold;
-}
-
-.self-photo {
-  width: 350px;
-  height: 414px;
-  object-fit: cover;
-}
-
-.left-info {
-  margin-right: 15px;
-}
-
-.right-info {
-  line-height: 160%;
-  padding-right: 5px;
-}
-
-.self-index {
-  line-height: 175%;
-  padding: 20px;
-}
-
-.contact-message {
-  margin: 25px 0;
-  line-height: 160%;
-}
-
-.contact-info {
-  margin: 5px 0;
-}
-.contact-address {
-  line-height: 160%;
-  margin: 30px 0;
-}
-
-.flex-info {
-  display: flex;
-}
-
-.attention-info {
-  font-weight: bold;
-  margin-top: 30px;
-}
-
-span {
-  margin-left: 60px;
-}
-
-/*
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
-*/
