--- a/src/app/pagetab.css
+++ b/src/app/pagetab.css
@@ -1,12 +1,17 @@
 .pagetab {
-  width: 25vw;
+  width: 20vw;
   background-color: #f0f0ff;
   border-right: 5px solid #cccccc;
   box-shadow: 0.5px 0px 0px black;
 }
 
-.tab-item > div {
+.tab-item {
   text-align: left;
-  width: 10vw;
+  width: 50%;
   margin: 30px auto;
+}
+
+.tab-item > span {
+  margin: 0;
+  padding: 0 3px;
 }
