--- a/src/features/routes/top/toppage.css
+++ b/src/features/routes/top/toppage.css
@@ -1,7 +1,3 @@
-.top-page {
-    margin-left: 5px;
-}
-
 .site-title {
     font-size: 30px;
     font-weight: bold;
@@ -55,6 +51,8 @@
 
 .flex-info {
     display: flex;
+    justify-content: center;
+    margin: 0 5px;
 }
 
 .attention-info {
