--- a/src/utils/globals.css
+++ b/src/utils/globals.css
@@ -1,16 +1,17 @@
-html,
-body {
+html {
   font-family: "Hiragino Kaku Gothic ProN";
+  font-size: 16px;
   height: 100%;
   margin: auto;
 }
 
 body {
   bottom: 0;
+  height: 100%;
+  margin: auto;
 }
 
 main {
-  display: flex;
   min-height: 100%;
 }
 
@@ -20,4 +21,22 @@ main>* {
 
 img {
   pointer-events: none;
+}
+
+@media screen and (min-width: 1024px) {
+  main {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  a {
+    text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  div {
+    background-size: 50%;
+  }
 }
